{
  "version": 4,
  "terraform_version": "0.14.9",
  "serial": 29,
  "lineage": "675a0a25-10f8-d6f3-0e30-11edb003330a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01e5f3b39b1b4d7d6",
            "domain": "vpc",
            "id": "eipalloc-01e5f3b39b1b4d7d6",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-18-214-82-176.compute-1.amazonaws.com",
            "public_ip": "18.214.82.176",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip_pub_1a"
            },
            "tags_all": {
              "Name": "eip_pub_1a"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw_vpc10",
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d40b3f8590d1f3c3",
            "domain": "vpc",
            "id": "eipalloc-0d40b3f8590d1f3c3",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-230-236-229.compute-1.amazonaws.com",
            "public_ip": "3.230.236.229",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip_pub_1c"
            },
            "tags_all": {
              "Name": "eip_pub_1c"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw_vpc10",
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "elb_ws",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:530744969948:loadbalancer/elb-ws",
            "availability_zones": [
              "us-east-1a",
              "us-east-1c"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "elb-ws-418823303.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 10,
                "interval": 30,
                "target": "TCP:5000",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "elb-ws",
            "idle_timeout": 60,
            "instances": [
              "i-0ae8f32e2c358dcf3",
              "i-0f64bf7914bf53d81"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 5000,
                "instance_protocol": "tcp",
                "lb_port": 5000,
                "lb_protocol": "tcp"
              }
            ],
            "name": "elb-ws",
            "security_groups": [
              "sg-01f4661dde4cfc40e"
            ],
            "source_security_group": "530744969948/default",
            "source_security_group_id": "sg-01f4661dde4cfc40e",
            "subnets": [
              "subnet-0425b977d63ca8fc5",
              "subnet-04889ad45fe5f9a3b"
            ],
            "tags": {
              "Name": "elb_ws"
            },
            "tags_all": {
              "Name": "elb_ws"
            },
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_instance.ws_1",
            "aws_instance.ws_2",
            "aws_security_group.asg_ws",
            "aws_subnet.sn_vpc10_pub_1a",
            "aws_subnet.sn_vpc10_pub_1c",
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ws_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e1d30f2c40c4c701",
            "arn": "arn:aws:ec2:us-east-1:530744969948:instance/i-0f64bf7914bf53d81",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f64bf7914bf53d81",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02115a49e2f415ed2",
            "private_dns": "ip-10-0-1-9.ec2.internal",
            "private_ip": "10.0.1.9",
            "public_dns": "ec2-54-163-1-49.compute-1.amazonaws.com",
            "public_ip": "54.163.1.49",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cdceae5bb66ca95c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0425b977d63ca8fc5",
            "tags": {
              "Name": "ws_1"
            },
            "tags_all": {
              "Name": "ws_1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a55a86d477b788b5"
            ]
          },
          "dependencies": [
            "aws_security_group.asg_ws",
            "aws_subnet.sn_vpc10_pub_1a",
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ws_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e1d30f2c40c4c701",
            "arn": "arn:aws:ec2:us-east-1:530744969948:instance/i-0ae8f32e2c358dcf3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ae8f32e2c358dcf3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0bbf2f224f8d407cb",
            "private_dns": "ip-10-0-1-228.ec2.internal",
            "private_ip": "10.0.1.228",
            "public_dns": "ec2-34-228-161-204.compute-1.amazonaws.com",
            "public_ip": "34.228.161.204",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f0682adf62aa08e3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0425b977d63ca8fc5",
            "tags": {
              "Name": "ws_2"
            },
            "tags_all": {
              "Name": "ws_2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a55a86d477b788b5"
            ]
          },
          "dependencies": [
            "aws_security_group.asg_ws",
            "aws_subnet.sn_vpc10_pub_1a",
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_vpc10",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:530744969948:internet-gateway/igw-0ab2228f254444f9c",
            "id": "igw-0ab2228f254444f9c",
            "owner_id": "530744969948",
            "tags": {
              "Name": "igw_vpc10"
            },
            "tags_all": {
              "Name": "igw_vpc10"
            },
            "vpc_id": "vpc-0db8c6f0b23c70ec1"
          },
          "dependencies": [
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw_pub_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01e5f3b39b1b4d7d6",
            "connectivity_type": "public",
            "id": "nat-01f510f42284ed025",
            "network_interface_id": "eni-033b05cf51bebebdc",
            "private_ip": "10.0.1.250",
            "public_ip": "18.214.82.176",
            "subnet_id": "subnet-0425b977d63ca8fc5",
            "tags": {
              "Name": "ngw_pub_1"
            },
            "tags_all": {
              "Name": "ngw_pub_1"
            }
          },
          "dependencies": [
            "aws_eip.eip_1",
            "aws_internet_gateway.igw_vpc10",
            "aws_subnet.sn_vpc10_pub_1a",
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw_pub_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d40b3f8590d1f3c3",
            "connectivity_type": "public",
            "id": "nat-0ac7bfe4075c083a4",
            "network_interface_id": "eni-0bce24149516252f4",
            "private_ip": "10.0.2.74",
            "public_ip": "3.230.236.229",
            "subnet_id": "subnet-04889ad45fe5f9a3b",
            "tags": {
              "Name": "ngw_pub_2"
            },
            "tags_all": {
              "Name": "ngw_pub_2"
            }
          },
          "dependencies": [
            "aws_eip.eip_2",
            "aws_internet_gateway.igw_vpc10",
            "aws_subnet.sn_vpc10_pub_1c",
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_priv_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:530744969948:route-table/rtb-050f7940928e1d48a",
            "id": "rtb-050f7940928e1d48a",
            "owner_id": "530744969948",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01f510f42284ed025",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt_priv_1a"
            },
            "tags_all": {
              "Name": "rt_priv_1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0db8c6f0b23c70ec1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip_1",
            "aws_internet_gateway.igw_vpc10",
            "aws_nat_gateway.ngw_pub_1",
            "aws_subnet.sn_vpc10_pub_1a",
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_priv_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:530744969948:route-table/rtb-05ed1f46d61b47c9d",
            "id": "rtb-05ed1f46d61b47c9d",
            "owner_id": "530744969948",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ac7bfe4075c083a4",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt_priv_1c"
            },
            "tags_all": {
              "Name": "rt_priv_1c"
            },
            "timeouts": null,
            "vpc_id": "vpc-0db8c6f0b23c70ec1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip_2",
            "aws_internet_gateway.igw_vpc10",
            "aws_nat_gateway.ngw_pub_2",
            "aws_subnet.sn_vpc10_pub_1c",
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:530744969948:route-table/rtb-0c51a2723d9ff4862",
            "id": "rtb-0c51a2723d9ff4862",
            "owner_id": "530744969948",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ab2228f254444f9c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt_pub"
            },
            "tags_all": {
              "Name": "rt_pub"
            },
            "timeouts": null,
            "vpc_id": "vpc-0db8c6f0b23c70ec1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw_vpc10",
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_pub_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:530744969948:route-table/rtb-0c2ec4be4a3fda737",
            "id": "rtb-0c2ec4be4a3fda737",
            "owner_id": "530744969948",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ab2228f254444f9c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt_pub_1c"
            },
            "tags_all": {
              "Name": "rt_pub_1c"
            },
            "timeouts": null,
            "vpc_id": "vpc-0db8c6f0b23c70ec1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw_vpc10",
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_priv_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e33e435c1c0ecf95",
            "route_table_id": "rtb-050f7940928e1d48a",
            "subnet_id": "subnet-0a4b497072e2f2093"
          },
          "dependencies": [
            "aws_eip.eip_1",
            "aws_internet_gateway.igw_vpc10",
            "aws_nat_gateway.ngw_pub_1",
            "aws_route_table.rt_priv_1a",
            "aws_subnet.sn_vpc10_priv_1a",
            "aws_subnet.sn_vpc10_pub_1a",
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_priv_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04400f770950f0be3",
            "route_table_id": "rtb-05ed1f46d61b47c9d",
            "subnet_id": "subnet-0b9b9c4add02627e4"
          },
          "dependencies": [
            "aws_eip.eip_2",
            "aws_internet_gateway.igw_vpc10",
            "aws_nat_gateway.ngw_pub_2",
            "aws_route_table.rt_priv_1c",
            "aws_subnet.sn_vpc10_priv_1c",
            "aws_subnet.sn_vpc10_pub_1c",
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_pub_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0515fbb5c8dc4752c",
            "route_table_id": "rtb-0c51a2723d9ff4862",
            "subnet_id": "subnet-0425b977d63ca8fc5"
          },
          "dependencies": [
            "aws_internet_gateway.igw_vpc10",
            "aws_route_table.rt_pub",
            "aws_subnet.sn_vpc10_pub_1a",
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_pub_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-091b5b1e7eed5f664",
            "route_table_id": "rtb-0c2ec4be4a3fda737",
            "subnet_id": "subnet-04889ad45fe5f9a3b"
          },
          "dependencies": [
            "aws_internet_gateway.igw_vpc10",
            "aws_route_table.rt_pub_1c",
            "aws_subnet.sn_vpc10_pub_1c",
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "asg_rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:530744969948:security-group/sg-069bfe9b8706aef05",
            "description": "Security Group dos bancos de dados",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All to all",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-069bfe9b8706aef05",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All from 10.0.0.0/16",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24",
                  "10.0.2.0/24"
                ],
                "description": "Liberando entrada das EC2 Webserver",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "sg_rds",
            "name_prefix": "",
            "owner_id": "530744969948",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "asg_rds"
            },
            "tags_all": {
              "Name": "asg_rds"
            },
            "timeouts": null,
            "vpc_id": "vpc-0db8c6f0b23c70ec1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "asg_ws",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:530744969948:security-group/sg-0a55a86d477b788b5",
            "description": "Security Group das instancias EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All to All",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a55a86d477b788b5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All from 10.0.0.0/16",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "sg_instance",
            "name_prefix": "",
            "owner_id": "530744969948",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "asg_ws"
            },
            "tags_all": {
              "Name": "asg_ws"
            },
            "timeouts": null,
            "vpc_id": "vpc-0db8c6f0b23c70ec1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn_vpc10_priv_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:530744969948:subnet/subnet-0a4b497072e2f2093",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a4b497072e2f2093",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "530744969948",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn_vpc10_priv_1a"
            },
            "tags_all": {
              "Name": "sn_vpc10_priv_1a"
            },
            "vpc_id": "vpc-0db8c6f0b23c70ec1"
          },
          "dependencies": [
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn_vpc10_priv_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:530744969948:subnet/subnet-0b9b9c4add02627e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b9b9c4add02627e4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "530744969948",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn_vpc10_priv_1c"
            },
            "tags_all": {
              "Name": "sn_vpc10_priv_1c"
            },
            "vpc_id": "vpc-0db8c6f0b23c70ec1"
          },
          "dependencies": [
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn_vpc10_pub_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:530744969948:subnet/subnet-0425b977d63ca8fc5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0425b977d63ca8fc5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "530744969948",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn_vpc10_pub_1a"
            },
            "tags_all": {
              "Name": "sn_vpc10_pub_1a"
            },
            "vpc_id": "vpc-0db8c6f0b23c70ec1"
          },
          "dependencies": [
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn_vpc10_pub_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:530744969948:subnet/subnet-04889ad45fe5f9a3b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04889ad45fe5f9a3b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "530744969948",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn_vpc10_pub_1c"
            },
            "tags_all": {
              "Name": "sn_vpc10_pub_1c"
            },
            "vpc_id": "vpc-0db8c6f0b23c70ec1"
          },
          "dependencies": [
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc10",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:530744969948:vpc/vpc-0db8c6f0b23c70ec1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06f15465e90547014",
            "default_route_table_id": "rtb-00dde7e77ff5ef843",
            "default_security_group_id": "sg-01f4661dde4cfc40e",
            "dhcp_options_id": "dopt-00ac8ee1962f76c1a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0db8c6f0b23c70ec1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00dde7e77ff5ef843",
            "owner_id": "530744969948",
            "tags": {
              "Name": "vpc10"
            },
            "tags_all": {
              "Name": "vpc10"
            }
          }
        }
      ]
    }
  ]
}